# pyswrd

./: .gitignore  .gitmodules  CHANGELOG.md  CMakeLists.txt  CONTRIBUTING.md  MANIFEST.in  README.md  pyproject.toml  setup.cfg  setup.py
.github/workflows/: package.yml  requirements.txt  test.yml
docs/: .gitignore  conf.py  index.rst  install.rst  requirements.txt
docs/_static/json/: switcher.json
docs/api/: evalue.rst  filter_result.rst  filter_score.rst  heuristic_filter.rst  hit.rst  index.rst  kmer_generator.rst  scorer.rst  sequences.rst
docs/guide/: copyright.rst  index.rst  install.rst
include/: mutex.pxd
include/sword/: chain.pxd  database_search.pxd  evalue.pxd  score_matrix.pxd
patches/: chain.hpp.patch  database_alignment.cpp.patch  database_search.cpp.patch  evalue.cpp.patch  hash.cpp.patch  hash.hpp.patch  kmers.cpp.patch  kmers.hpp.patch  reader.hpp.patch  score_matrix.cpp.patch  score_matrix.hpp.patch
pkg/aur/: PKGBUILD.in
pyswrd/: __init__.py  _sword.pyx
pyswrd/tests/: __init__.py  fasta.py  test_filter.py  test_search.py  test_sequences.py
pyswrd/tests/data/: __init__.py  uniprot_sprot15.fasta
src/: CMakeLists.txt
src/pyswrd/: CMakeLists.txt  __init__.py  _sword.pyx  lib.pyi  lib.pyx
src/pyswrd/tests/: __init__.py  test_doctest.py  test_search.py
src/pyswrd/tests/data/: uniprot_sprot12071.fasta  uniprot_sprot15.fasta  uniprot_sprot196.fasta
src/scripts/: apply_patch.py
src/sword/: CMakeLists.txt
